[package]
name = "rusty_conflation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
fs-err = "2.11.0"
geo = { git = "https://github.com/dabreegster/geo", branch = "boolops_and_linesplit" }
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
indicatif = "0.17.8"
lonlat_bng = { git = "https://github.com/urschrei/lonlat_bng" }
rstar = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[patch.crates-io]
geo-types = { git = "https://github.com/georust/geo" }
